<resources>
    <string name="app_name">Mobile Programming</string>
    <string name="login_text">E-Mail / Username</string>
    <string name="login_hint">Enter your e-mail or username</string>
    <string name="login_button_text">LOGIN</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_up">Don\'t have an account? Sign up</string>
    <string name="sign_up_button_text">SIGN UP</string>
    <string name="reset_password_button_text">Reset</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="dummy_text_10w">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nec.</string>
    <string name="email_from">From:</string>
    <string name="email_to">To:</string>
    <string name="email_to_hint">To</string>
    <string name="email_from_hint">From</string>
    <string name="email_subject">Subject:</string>
    <string name="email_subject_hint">Subject</string>
    <string name="compose_email_hint">Compose email</string>
    <string name="email_send_button">Send</string>
    <string name="email_attachment_desc">E-mail attachment</string>
    <string name="email_send_btn_desc">Email send</string>
    <string name="email_text">E-Mail</string>
    <string name="email_hint">Enter your e-mail</string>
    <string name="username_text">Username</string>
    <string name="username_hint">Enter your username</string>
    <string name="image_url">GitHub Username:</string>
    <string name="image_url_hint">Enter your GitHub username</string>
    <string name="list_users">LIST USERS</string>
    <string name="profile_picture_desc">Profile picture</string>
    <string name="update_user">Update User</string>
    <string name="delete">Delete</string>
    <string name="delete_user">Delete user</string>
    <string name="delete_user_message">Are you sure you want to delete user?</string>
    <string name="reset_password">Reset password</string>
    <string name="update">Update</string>
    <string name="send_email">SEND EMAIL</string>
    <string name="settings">SETTINGS</string>
    <string name="notes">Notes</string>
    <string name="sensors">Sensors</string>
    <string name="my_note">My Note</string>
    <string name="save">Save</string>
    <string name="my_note_hint">My note</string>
    <string name="new_note">New Note</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="mode">Mode</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="invalid_intent_error_message">Invalid intent</string>
    <string name="sms_receive_ok_message">SMS Received</string>
    <string name="exception">Unexpected exception</string>
    <string name="alarm_status">Alarm Status</string>
    <string name="cancel">Cancel</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="invalid_time">Invalid time</string>
    <string name="alarm_add_error_message">Alarm is already active</string>
    <string name="alarm_cancel_error_message">Alarm is not set</string>
    <string name="alarm">Alarm</string>
    <string name="alarm_set_error_message">Alarm is not set</string>
    <string name="download_activity_title">Download Activity</string>
    <string name="download">Download</string>
    <string name="dummy_text_2w">Dummy Text</string>
    <string name="location">LOCATION</string>
    <string name="get_location">Get Location</string>
    <string name="share_location">Share Location</string>
    <string name="login_attempt_error_text">Too many wrong login attempts. Closing app.</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="login_ok_message">You made it!!! Login!!!</string>
    <string name="pasasword_length_error_message">Minimum password length is 6</string>
    <string name="password_match_error_message">Passwords do not match</string>
    <string name="enter_credentials">Enter credentials</string>
    <string name="user_exist_error_message">User already exist</string>
    <string name="note_delete_ok_message">Deleted</string>
    <string name="unknown_error_message">something happened</string>
    <string name="note_save_empty_error_message">Can\'t save empty note</string>
    <string name="sensor_inactivity_message">5 second inactivity</string>
    <string name="required_sensor_message">You need accelerometer and light sensor. Sorry :/</string>
    <string name="invalid_values">Invalid values</string>
    <string name="fill_areas_message">Please fill all areas</string>
    <string name="invalid_email_or_username_message">Invalid e-mail/username</string>
    <string name="user_not_exist_message">User does not exist</string>
    <string name="reset">Reset</string>
    <string name="download_completed_image_description">Download Completed</string>
    <string name="download_ok_message">Download completed</string>
    <string name="no_sms_message">No SMS received</string>
    <string name="monitor">MONITOR</string>
    <string name="note_saved_ok_message">Note saved</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Non-binary</item>
    </string-array>
</resources>
