<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.login.SignUpActivity">


    <TextView
        android:id="@+id/sign_up_email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/email_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@id/sign_up_email_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/sign_up_email_et"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:alpha="0.90"
        android:autofillHints=""
        android:background="@drawable/rounded_edit_text_shape"
        android:ems="14"
        android:fontFamily="@font/montserrat"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/secondary_text_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@id/sign_up_email_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <TextView
        android:id="@+id/sign_up_username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/username_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/sign_up_email_et"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_email_et" />

    <EditText
        android:id="@+id/sign_up_username_et"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="380dp"
        android:alpha="0.90"
        android:autofillHints=""
        android:background="@drawable/rounded_edit_text_shape"
        android:ems="14"
        android:fontFamily="@font/montserrat"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/secondary_text_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/sign_up_email_et"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_username_text"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/sign_up_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/password"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/sign_up_username_et"
        app:layout_constraintTop_toBottomOf="@id/sign_up_username_et"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/sign_up_password_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:alpha="0.90"
        android:autofillHints=""
        android:background="@drawable/rounded_edit_text_shape"
        android:ems="14"
        android:fontFamily="@font/montserrat"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColorHint="@android:color/secondary_text_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/sign_up_password_text"
        app:layout_constraintTop_toBottomOf="@id/sign_up_password_text"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/sign_up_image_url_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/image_url"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/sign_up_password_et"
        app:layout_constraintTop_toBottomOf="@id/sign_up_password_et"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/sign_up_image_url_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:alpha="0.90"
        android:autofillHints=""
        android:background="@drawable/rounded_edit_text_shape"
        android:ems="14"
        android:fontFamily="@font/montserrat"
        android:hint="@string/image_url_hint"
        android:inputType="textUri"
        android:textColorHint="@android:color/secondary_text_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/sign_up_image_url_text"
        app:layout_constraintTop_toBottomOf="@id/sign_up_image_url_text"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/login_button_shape"
        android:fontFamily="@font/montserrat"
        android:text="@string/sign_up_button_text"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/sign_up_image_url_et"
        app:layout_constraintTop_toBottomOf="@id/sign_up_image_url_et"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>