<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/email_from_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/email_from"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@id/email_from_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/email_from_et"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="624dp"
        android:alpha="0.90"
        android:autofillHints='""'
        android:background="@drawable/rounded_edit_text_shape"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/email_from_hint"
        android:inputType="textNoSuggestions|textEmailAddress"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/secondary_text_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@id/email_from_text"
        app:layout_constraintTop_toBottomOf="@id/email_from_text" />

    <TextView
        android:id="@+id/email_to_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/email_to"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/email_from_et"
        app:layout_constraintTop_toBottomOf="@id/email_from_et"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/email_to_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:alpha="0.90"
        android:autofillHints=""
        android:background="@drawable/rounded_edit_text_shape"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/email_to_hint"
        android:inputType="textNoSuggestions|textEmailAddress"
        android:textColorHint="@android:color/secondary_text_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/email_to_text"
        app:layout_constraintTop_toBottomOf="@id/email_to_text"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/email_subject_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/email_subject"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/email_to_et"
        app:layout_constraintTop_toBottomOf="@id/email_to_et"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/email_subject_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:alpha="0.90"
        android:autofillHints=""
        android:background="@drawable/rounded_edit_text_shape"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/email_subject_hint"
        android:inputType="text"
        android:textColorHint="@android:color/secondary_text_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/email_subject_text"
        app:layout_constraintTop_toBottomOf="@id/email_subject_text"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextFields" />

    <ImageButton
        android:id="@+id/email_attachment_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?android:attr/panelBackground"
        android:contentDescription="@string/email_attachment_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/email_send_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_compose"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_attachment_accent_48dp" />

    <EditText
        android:id="@+id/email_compose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:alpha="0.90"
        android:autofillHints=""
        android:background="@drawable/rounded_edit_text_shape"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:gravity="top|start"
        android:hint="@string/compose_email_hint"
        android:inputType="textMultiLine|textNoSuggestions"
        android:maxLines="12"
        android:minLines="8"
        android:textColorHint="@android:color/secondary_text_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/email_subject_et"
        app:layout_constraintTop_toBottomOf="@+id/email_subject_et"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextFields" />

    <ImageButton
        android:id="@+id/email_send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_send_accent_48dp"
        android:contentDescription="@string/email_send_btn_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/email_attachment_btn"
        app:layout_constraintTop_toBottomOf="@id/email_compose"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>